--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "description": "my small react boilerplate",
   "main": "src/server.js",
   "scripts": {
-    "start": "babel-node scripts/build.js",
-    "build": "babel-node scripts/build.js --production",
+    "start": "cross-env NODE_ENV=development babel-node scripts/build.js",
+    "build": "cross-env NODE_ENV=production babel-node scripts/build.js",
     "clean": "babel-node scripts/clean.js",
     "eslint": "eslint --ignore-path .gitignore",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -60,11 +60,10 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.16.0",
+    "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
-    "deepcopy": "^0.6.3",
     "eslint": "^3.6.0",
     "eslint-plugin-react": "^6.3.0",
-    "extend": "^3.0.0",
     "file-loader": "^0.9.0",
     "fs-extra": "^0.30.0",
     "isomorphic-style-loader": "^1.0.0",
