--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "eslint-plugin-react": "^6.3.0",
     "favicons": "^4.8.3",
     "file-loader": "^0.9.0",
-    "fs-extra": "^0.30.0",
+    "fs-extra-promise": "^0.4.1",
     "isomorphic-style-loader": "^1.0.0",
     "json-loader": "^0.5.4",
     "nodemon": "^1.10.2",
