Html is not react component now, better favicon dealing

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ node_modules/
 # build results
 build/
 src/public/favicon/
-src/components/structures/Html/favicon.js
+src/components/structures/Html/favicon.json
