--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-eslint": "^6.1.2",
     "babel-istanbul": "^0.11.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
