--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "assets-webpack-plugin": "^3.4.0",
     "babel-cli": "^6.14.0",
     "babel-eslint": "^6.1.2",
-    "babel-istanbul": "^0.11.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-react-transform": "^2.0.2",
@@ -75,17 +74,19 @@
     "favicons": "^4.8.3",
     "file-loader": "^0.9.0",
     "fs-extra-promise": "^0.4.1",
-    "ignore-styles": "^5.0.1",
     "isomorphic-style-loader": "^1.0.0",
+    "istanbul": "^0.4.5",
     "json-loader": "^0.5.4",
     "mocha": "^3.1.0",
     "nodemon": "^1.10.2",
     "normalize.css": "^4.2.0",
+    "opn": "^4.0.2",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^3.0.0-beta.5",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.3.1",
+    "remap-istanbul": "^0.6.4",
     "supertest": "^2.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
