--- a/package.json
+++ b/package.json
@@ -65,9 +65,9 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.16.0",
-    "child-process-promise": "^2.1.3",
     "coveralls": "^2.11.14",
     "cross-env": "^3.0.0",
+    "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
     "eslint": "^3.6.0",
     "eslint-plugin-react": "^6.3.0",
