--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-boilerplate",
   "engines": {
-    "node": "^6.6.0",
-    "npm": "^3.10.7"
+    "node": "^7.2.0",
+    "npm": "^4.0.3"
   },
   "version": "1.0.0",
   "description": "my small react boilerplate",
@@ -43,54 +43,54 @@
     "isomorphic-fetch": "^2.2.1",
     "minimize": "^2.0.0",
     "normalize.css": "^5.0.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
-    "react-router-redux": "^4.0.6",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.6.0"
   },
   "devDependencies": {
-    "assets-webpack-plugin": "^3.4.0",
-    "babel-cli": "^6.14.0",
+    "assets-webpack-plugin": "^3.5.0",
+    "babel-cli": "^6.18.0",
     "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.5",
+    "babel-loader": "^6.2.8",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.9",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.11",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-latest": "^6.14.0",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-node6": "^11.0.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "browser-sync": "^2.16.0",
-    "coveralls": "^2.11.14",
-    "cross-env": "^3.0.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "browser-sync": "^2.18.2",
+    "coveralls": "^2.11.15",
+    "cross-env": "^3.1.3",
     "cross-spawn": "^5.0.0",
     "css-loader": "^0.26.0",
-    "eslint": "^3.6.0",
-    "eslint-plugin-react": "^6.3.0",
+    "eslint": "^3.11.1",
+    "eslint-plugin-react": "^6.7.1",
     "favicons": "^4.8.3",
     "file-loader": "^0.9.0",
     "fs-extra-promise": "^0.4.1",
-    "isomorphic-style-loader": "^1.0.0",
+    "isomorphic-style-loader": "^1.1.0",
     "istanbul": "^0.4.5",
     "json-loader": "^0.5.4",
-    "mocha": "^3.1.0",
-    "nodemon": "^1.10.2",
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
     "opn": "^4.0.2",
     "raw-loader": "^0.5.1",
-    "react-hot-loader": "^3.0.0-beta.5",
+    "react-hot-loader": "^1.3.1",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
-    "redbox-react": "^1.3.1",
+    "redbox-react": "^1.3.3",
     "remap-istanbul": "^0.7.0",
-    "supertest": "^2.0.0",
+    "supertest": "^2.0.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.2"
   }
 }
