--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "nodemon": "^1.11.0",
     "opn": "^4.0.2",
     "raw-loader": "^0.5.1",
-    "react-hot-loader": "^1.3.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.3.3",
